Closed
Bug 1732944
Opened 3 years ago
Closed 3 years ago
"No remote found!" assertion reached when cache is enabled
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
94 Branch
Tracking | Status | |
---|---|---|
firefox94 | --- | fixed |
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
Attachments
(1 file)
Morgan describes reaching that assertion when enabling cache, and doing some kind of light workload, I assume.
Assignee | ||
Comment 1•3 years ago
|
||
Finally managed to reproduce while running browser tests with caching enabled.
./mach mochitest --setpref "accessibility.cache.enabled=true" --headless accessible/tests/browser/states
Assignee | ||
Comment 2•3 years ago
|
||
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9b266303624d
Return early if recieving cache on a shutdown document. r=morgan
Comment 4•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox94:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•