Bug 1732944 - Return early if recieving cache on a shutdown document. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D126839